[MOOSE-270]: fix logic issues; update spacing

--- a/wp-content/themes/core/blocks/tribe/related-posts/style.pcss
+++ b/wp-content/themes/core/blocks/tribe/related-posts/style.pcss
@@ -7,7 +7,7 @@
 .b-related-posts {
 	--related-posts-grid-columns: 1fr;
 	display: grid;
-	gap: var(--spacer-40);
+	gap: var(--spacer-50);
 	grid-template-columns: var(--related-posts-grid-columns);
 }
 
